refactor: 사용자 이름 검증 후 배팅 금액 입력받게 수정